# vtk-polyglot

./: .gitignore  vtk-the-polyglot.md
examples/clojure/: cone.clj
examples/cpp/: CMakeLists.txt  cone.cpp
examples/csharp/: cone.cs  cone.csproj
examples/fsharp/: cone.fsproj  cone.fsx
examples/groovy/: cone.groovy
examples/java/: CMakeLists.txt  cone.java
examples/javascript/: cone.html  cone.js
examples/julia/: cone.jl
examples/python/: cone.py
examples/ruby/: cone.rb
